--- a/package.json
+++ b/package.json
@@ -27,45 +27,61 @@
   },
   "private": true,
   "dependencies": {
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-less": "1.0.1",
+    "@zeit/next-sass": "1.0.1",
+    "@zeit/next-stylus": "1.0.1",
     "document-register-element": "1.13.1",
+    "next": "9.1.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "next": "9.1.5",
-    "@zeit/next-css": "1.0.1",
-    "@zeit/next-sass": "1.0.1",
-    "@zeit/next-less": "1.0.1",
-    "@zeit/next-stylus": "1.0.1",
     "styled-components": "5.0.0"
   },
   "devDependencies": {
-    "@nrwl/workspace": "9.1.2",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.19.1",
-    "@nrwl/next": "9.1.2",
-    "@nrwl/jest": "9.1.2",
-    "jest": "24.9.0",
-    "@types/jest": "24.9.1",
-    "ts-jest": "24.0.0",
-    "cypress": "^4.1.0",
+    "@commitlint/config-conventional": "^8.3.4",
     "@nrwl/cypress": "9.1.2",
-    "@nrwl/web": "9.1.2",
+    "@nrwl/eslint-plugin-nx": "9.1.2",
+    "@nrwl/jest": "9.1.2",
+    "@nrwl/next": "9.1.2",
     "@nrwl/react": "9.1.2",
+    "@nrwl/web": "9.1.2",
+    "@nrwl/workspace": "9.1.2",
+    "@testing-library/react": "9.4.0",
+    "@types/jest": "24.9.1",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "@testing-library/react": "9.4.0",
-    "@nrwl/eslint-plugin-nx": "9.1.2",
-    "@typescript-eslint/parser": "2.19.2",
+    "@types/styled-components": "4.4.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "commitlint": "^8.3.5",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "@types/styled-components": "4.4.2"
+    "husky": "^4.2.3",
+    "jest": "24.9.0",
+    "lint-staged": "^10.0.8",
+    "prettier": "1.19.1",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.7.4"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "{apps,libs}/**/*.{ts,json,md,scss,html}": [
+      "npm run affected:lint  -- --uncommitted --parallel -- --fix",
+      "npm run format:write -- --uncommitted"
+    ]
   }
 }
