--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/styled-components": "4.4.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "babel-plugin-styled-components": "^1.10.7",
     "commitlint": "^8.3.5",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
