feat(homepage): replace logo, add locale select & remove useless content

--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     }
   },
   "lint-staged": {
-    "{apps,libs}/**/*.{ts,json,md,scss,html}": [
+    "{apps,libs}/**/*.{js,ts,tsx,json,md,scss,html}": [
       "npm run affected:lint  -- --uncommitted --parallel -- --fix",
       "npm run format:write -- --uncommitted"
     ]
