chore(projects): generate multiple e2e apps and libs

--- a/nx.json
+++ b/nx.json
@@ -16,7 +16,27 @@
     },
     "lucas-e2e": {
       "tags": [],
-      "implicitDependencies": ["lucas"]
+      "implicitDependencies": [
+        "lucas"
+      ]
+    },
+    "ui": {
+      "tags": []
+    },
+    "ui-e2e": {
+      "tags": [],
+      "implicitDependencies": [
+        "ui"
+      ]
+    },
+    "lucas-components": {
+      "tags": []
+    },
+    "lucas-components-e2e": {
+      "tags": [],
+      "implicitDependencies": [
+        "lucas-components"
+      ]
     }
   }
 }
