--- a/package.json
+++ b/package.json
@@ -31,29 +31,43 @@
     "@zeit/next-less": "1.0.1",
     "@zeit/next-sass": "1.0.1",
     "@zeit/next-stylus": "1.0.1",
+    "color": "^3.1.2",
     "document-register-element": "1.13.1",
+    "lodash": "^4.17.15",
     "next": "9.1.5",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "styled-components": "5.0.0"
+    "styled-components": "5.0.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.900.7",
+    "@babel/core": "^7.9.0",
     "@commitlint/config-conventional": "^8.3.4",
     "@nrwl/cypress": "9.1.2",
     "@nrwl/eslint-plugin-nx": "9.1.2",
     "@nrwl/jest": "9.1.2",
     "@nrwl/next": "9.1.2",
     "@nrwl/react": "9.1.2",
+    "@nrwl/storybook": "*",
     "@nrwl/web": "9.1.2",
     "@nrwl/workspace": "9.1.2",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-knobs": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/core": "^5.3.17",
+    "@storybook/react": "^5.3.17",
     "@testing-library/react": "9.4.0",
     "@types/jest": "24.9.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/styled-components": "4.4.2",
+    "@types/styled-system": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "babel-loader": "8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
     "commitlint": "^8.3.5",
     "cypress": "^4.1.0",
@@ -68,10 +82,11 @@
     "jest": "24.9.0",
     "lint-staged": "^10.0.8",
     "prettier": "1.19.1",
+    "storybook-readme": "^5.0.8",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.7.4"
+    "typescript": "~3.8.3"
   },
   "husky": {
     "hooks": {
@@ -80,7 +95,7 @@
     }
   },
   "lint-staged": {
-    "{apps,libs}/**/*.{js,ts,tsx,json,md,scss,html}": [
+    "{apps,libs}/**/*.{ts,tsx,json,md,scss,html}": [
       "npm run affected:lint  -- --uncommitted --parallel -- --fix",
       "npm run format:write -- --uncommitted"
     ]
