--- a/package.json
+++ b/package.json
@@ -65,15 +65,15 @@
     "@types/react-dom": "16.9.4",
     "@types/styled-components": "4.4.2",
     "@types/styled-system": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "babel-loader": "8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
     "commitlint": "^8.3.5",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
@@ -81,7 +81,7 @@
     "husky": "^4.2.3",
     "jest": "24.9.0",
     "lint-staged": "^10.0.8",
-    "prettier": "1.19.1",
+    "prettier": "^2.0.2",
     "storybook-readme": "^5.0.8",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
