--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@hype/ui": ["libs/ui/src/index.ts"],
-      "@hype/lucas-components": ["libs/lucas-components/src/index.ts"]
+      "@hype/lucas-components": ["libs/lucas-components/src/index.ts"],
+      "@hype/i18n": ["libs/i18n/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
