--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,12 @@
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-parameter-properties": "off",
+    "@typescript-eslint/camelcase": [
+      "error",
+      {
+        "allow": ["content_type"]
+      }
+    ],
     "@nrwl/nx/enforce-module-boundaries": [
       "error",
       {
