--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@zeit/next-sass": "1.0.1",
     "@zeit/next-stylus": "1.0.1",
     "color": "^3.1.2",
-    "document-register-element": "1.13.1",
+    "contentful": "^7.14.0",
+    "document-register-element": "1.14.3",
     "lodash": "^4.17.15",
-    "next": "9.1.5",
-    "react": "16.12.0",
+    "next": "9.3.2",
+    "react": "16.13.1",
     "react-dom": "16.12.0",
     "styled-components": "5.0.0",
     "styled-system": "^5.1.5"
@@ -44,48 +45,48 @@
     "@angular-devkit/build-angular": "^0.900.7",
     "@babel/core": "^7.9.0",
     "@commitlint/config-conventional": "^8.3.4",
-    "@nrwl/cypress": "9.1.2",
-    "@nrwl/eslint-plugin-nx": "9.1.2",
-    "@nrwl/jest": "9.1.2",
-    "@nrwl/next": "9.1.2",
-    "@nrwl/react": "9.1.2",
-    "@nrwl/storybook": "*",
-    "@nrwl/web": "9.1.2",
-    "@nrwl/workspace": "9.1.2",
+    "@nrwl/cypress": "9.1.4",
+    "@nrwl/eslint-plugin-nx": "9.1.4",
+    "@nrwl/jest": "9.1.4",
+    "@nrwl/next": "9.1.4",
+    "@nrwl/react": "9.1.4",
+    "@nrwl/storybook": "9.1.4",
+    "@nrwl/web": "9.1.4",
+    "@nrwl/workspace": "9.1.4",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
     "@storybook/core": "^5.3.17",
     "@storybook/react": "^5.3.17",
-    "@testing-library/react": "9.4.0",
-    "@types/jest": "24.9.1",
+    "@testing-library/react": "10.0.1",
+    "@types/jest": "25.1.4",
     "@types/lodash": "^4.14.149",
-    "@types/node": "~8.9.4",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "4.4.2",
+    "@types/node": "~13.9.5",
+    "@types/react": "16.9.26",
+    "@types/react-dom": "16.9.5",
+    "@types/styled-components": "5.0.1",
     "@types/styled-system": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "commitlint": "^8.3.5",
-    "cypress": "^4.1.0",
-    "dotenv": "6.2.0",
+    "cypress": "^4.2.0",
+    "dotenv": "8.2.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
     "husky": "^4.2.3",
-    "jest": "24.9.0",
-    "lint-staged": "^10.0.8",
+    "jest": "25.2.3",
+    "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
     "storybook-readme": "^5.0.8",
-    "ts-jest": "24.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-jest": "25.2.1",
+    "ts-node": "~8.8.1",
+    "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
   "husky": {
