feat(HomePage): use new i18n hooks and hocs

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "document-register-element": "1.14.3",
     "lodash": "^4.17.15",
     "next": "9.3.2",
+    "next-server": "^9.0.5",
     "react": "16.13.1",
     "react-dom": "16.12.0",
     "styled-components": "5.0.0",
