--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@hype/ui": ["libs/ui/src/index.ts"],
       "@hype/lucas-components": ["libs/lucas-components/src/index.ts"],
-      "@hype/i18n": ["libs/i18n/src/index.ts"]
+      "@hype/i18n": ["libs/i18n/src/index.ts"],
+      "@hype/contentful": ["libs/contentful/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
