--- a/package.json
+++ b/package.json
@@ -72,8 +72,11 @@
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "commitlint": "^8.3.5",
+    "contentful-cli": "^1.3.14",
+    "contentful-migration": "^1.0.20",
     "cypress": "^4.2.0",
     "dotenv": "8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "2.20.1",
@@ -88,7 +91,8 @@
     "ts-jest": "25.2.1",
     "ts-node": "~8.8.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "webpack-merge": "^4.2.2"
   },
   "husky": {
     "hooks": {
