feat(compound): copy from lucas

--- a/nx.json
+++ b/nx.json
@@ -37,6 +37,16 @@
     },
     "contentful": {
       "tags": []
+    },
+    "compound": {
+      "tags": []
+    },
+    "compound-e2e": {
+      "tags": [],
+      "implicitDependencies": ["compound"]
+    },
+    "compound-ui": {
+      "tags": []
     }
   }
 }
