--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-server": "^9.0.5",
     "react": "16.13.1",
     "react-dom": "16.12.0",
+    "react-lazyload": "^2.6.7",
     "styled-components": "5.0.0",
     "styled-system": "^5.1.5"
   },
@@ -85,8 +86,11 @@
     "eslint-plugin-react-hooks": "3.0.0",
     "husky": "^4.2.3",
     "jest": "25.2.3",
+    "jest-canvas-mock": "^2.2.0",
+    "jest-styled-components": "^7.0.2",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
+    "react-test-renderer": "^16.13.1",
     "storybook-readme": "^5.0.8",
     "ts-jest": "25.2.1",
     "ts-node": "~8.8.1",
